--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "Trackonomy",
+  "name": "main",
+  "displayName": "Trackonomy",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,8 +11,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native-stack": "^7.3.10",
+    "expo": "^53.0.9",
     "react": "19.0.0",
-    "react-native": "0.79.0"
+    "react-native": "0.79.0",
+    "react-native-gesture-handler": "^2.25.0",
+    "react-native-reanimated": "^3.17.4",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-native-screens": "^4.10.0",
+    "react-native-status-bar-height": "^2.6.0",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
